--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -29,7 +29,7 @@
                 <div class="col-md-3">
                     <div class="card">
                         <button type="button" class=" btn btn-block ink-reaction btn-default-bright"  data-toggle="modal" data-target="#ConservativeModal">
-                            Консервативный
+                            Валютый робот
                         </button>
                     </div><!--end .card -->
                 </div><!--end .col -->
@@ -38,7 +38,7 @@
                 <!-- BEGIN BUTTON -->
                 <div class="col-md-3">
                     <div class="card">
-                        <button type="button" class=" btn btn-block ink-reaction btn-info " data-toggle="modal" data-target="#OptimalModal" >Оптимальный</button>
+                        <button type="button" class=" btn btn-block ink-reaction btn-info " data-toggle="modal" data-target="#OptimalModal" >Криптовалютый робот</button>
                     </div><!--end .card -->
                 </div><!--end .col -->
                 <!-- END BUTTON -->
@@ -137,18 +137,18 @@
                             {#</div><!--end .col -->#}
                             <div class="_col-md-4">
                                 <div class="card-head">
-                                    <header>Отчёт</header>
+                                    <header> Инвестированые средства  </header>
                                 </div>
                                 <div class="card-body height-8">
 
 
 
-                                    Консервативный  <strong id="balance-Conservative">{{ report.conservative }}</strong> USD
+                                    Робототезированая торговля   (валютый робот)  <strong  style="text-align: right;" id="balance-Conservative">{{ report.conservative }}</strong> USD
                                     {#<span class="pull-right text-success text-sm">0% <i class="md md-trending-up"></i></span>#}
                                     <div class="progress progress-hairline">
                                         <div class="progress-bar progress-bar-primary-dark" style="width:0%"></div>
                                     </div>
-                                    Оптимальный <strong id="balance-Optimal">{{ report.optimum }}</strong> USD
+                                    Робототезированая торговля   (криптовалютый робот)  <strong id="balance-Optimal">{{ report.optimum }}</strong> USD
                                     {#<span class="pull-right text-success text-sm">0% <i class="md md-trending-up"></i></span>#}
                                     <div class="progress progress-hairline">
                                         <div class="progress-bar progress-bar-primary-dark" style="width:0%"></div>
@@ -184,7 +184,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel"> Консервативный </h5>
+                    <h5 class="modal-title" id="exampleModalLabel">  Робототезированая торговля   (валютый робот)   </h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -193,15 +193,37 @@
                     <!-- BEGIN SPINNERS -->
                     <div class="row">
                         <div class="col-lg-12">
-                            <h4>Консервативный </h4>
+                            {#<h4> Валютый робот - (регистрационная форма) </h4>#}
                         </div><!--end .col -->
                         <div class="">
                             <div class="card">
                                 <div class="card-body">
+
+
+                                    <table class="table table-striped">
+                                        <tbody>
+                                        <tr>
+                                            <td>Форма проведения:</td>
+                                            <td>3 видео урок.</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Oбъем услуг</td>
+                                            <td>Робототезированая торговля   (валютый робот)</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Содержание</td>
+                                            <td>Инвестиции</td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+
+
+
+
                                     <form class="form">
                                         <div class="form-group">
                                             <input type="text" class="form-control" id="valueConservativeModal"  placeholder="0" />
-                                            <label>Сума инвестирования</label>
+                                            <label>Сума за которую вы покупаете услугу $ </label>
                                         </div>
                                     </form>
                                 </div><!--end .card-body -->
@@ -211,7 +233,7 @@
                     <!-- END SPINNERS -->
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn ink-reaction btn-raised btn-primary" onclick="App.Invest('Conservative') ">Инвестировать</button>
+                    <button type="button" class="btn ink-reaction btn-raised btn-primary" onclick="App.Invest('Conservative') "> Купить (инвестировать) </button>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
                     {#<a href="#" class="btn btn-link" >Подробней</a>#}
                 </div>
@@ -223,7 +245,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">    Оптимальный  </h5>
+                    <h5 class="modal-title">    Робототезированая торговля   (криптовалютый робот)  </h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -232,15 +254,34 @@
                     <!-- BEGIN SPINNERS -->
                     <div class="row">
                         <div class="col-lg-12">
-                            <h4>Оптимальный</h4>
+                            {#<h4>Оптимальный</h4>#}
                         </div><!--end .col -->
                         <div class="">
                             <div class="card">
                                 <div class="card-body">
+
+                                    <table class="table table-striped">
+                                        <tbody>
+                                        <tr>
+                                            <td>Форма проведения:</td>
+                                            <td>3 видео урок.</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Oбъем услуг</td>
+                                            <td>Робототезированая торговля   (криптовалютый робот)</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Содержание</td>
+                                            <td>Инвестиции</td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+
+
                                     <form class="form">
                                         <div class="form-group">
                                             <input type="text" class="form-control" id="valueOptimalModal" placeholder="0" />
-                                            <label>Сума инвестирования</label>
+                                            <label>Сума инвестирования $</label>
                                         </div>
                                     </form>
                                 </div><!--end .card-body -->
@@ -250,7 +291,7 @@
                     <!-- END SPINNERS -->
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn ink-reaction btn-raised btn-primary" onclick="App.Invest('Optimal')" >Инвестировать</button>
+                    <button type="button" class="btn ink-reaction btn-raised btn-primary" onclick="App.Invest('Optimal')" > Купить (инвестировать) </button>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
                     {#<a href="#" class="btn btn-link">Подробней</a>#}
                 </div>
@@ -272,15 +313,35 @@
                     <!-- BEGIN SPINNERS -->
                     <div class="row">
                         <div class="col-lg-12">
-                            <h4> IPO </h4>
+                            {#<h4> IPO </h4>#}
                         </div><!--end .col -->
                         <div class="">
                             <div class="card">
                                 <div class="card-body">
+
+
+                                    <table class="table table-striped">
+                                        <tbody>
+                                        <tr>
+                                            <td>Форма проведения:</td>
+                                            <td>3 видео урок.</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Oбъем услуг</td>
+                                            <td>IPO</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Содержание</td>
+                                            <td>Инвестиции</td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+
+
                                     <form class="form">
                                         <div class="form-group">
                                             <input type="text" class="form-control"  id="valueIPOModal" placeholder="0" />
-                                            <label>Сума инвестирования</label>
+                                            <label>Сума инвестирования $</label>
                                         </div>
                                     </form>
                                 </div><!--end .card-body -->
@@ -290,7 +351,7 @@
                     <!-- END SPINNERS -->
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn ink-reaction btn-raised btn-primary" onclick="App.Invest('IPO') " >Инвестировать</button>
+                    <button type="button" class="btn ink-reaction btn-raised btn-primary" onclick="App.Invest('IPO') " >Купить (инвестировать)</button>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
                     {#<a href="#" class="btn btn-link">Подробней</a>#}
                 </div>
