--- a/templates/bundles/FOSUserBundle/Registration/confirmed.html.twig
+++ b/templates/bundles/FOSUserBundle/Registration/confirmed.html.twig
@@ -3,8 +3,27 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block fos_user_content %}
-    <p>{{ 'registration.confirmed'|trans({'%username%': user.username}) }}</p>
-    {% if targetUrl %}
-    <p><a href="{{ targetUrl }}">{{ 'registration.back'|trans }}</a></p>
-    {% endif %}
+
+    <div class="card">
+
+        <div>
+            <div class="nano-content" tabindex="0">
+                <div class="card-body height-6   style-default-bright" style="height: auto;">
+
+                    <center>
+                        <p>{{ 'registration.confirmed'|trans({'%username%': user.username}) }}</p>
+                        {% if targetUrl %}
+                            <p><a href="{{ targetUrl }}">{{ 'registration.back'|trans }}</a></p>
+                        {% endif %}
+                    </center>
+                </div>
+                <center> <a class="btn btn-primary" href="/admin/" role="button">Перейти в кабинет</a> </center>
+            </div>
+            <div class="nano-pane">
+                <div class="nano-slider" style="height: 45px; transform: translate(0px, 95px);"></div>
+            </div>
+        </div>
+    </div>
+
+
 {% endblock fos_user_content %}
