--- a/templates/bundles/FOSUserBundle/Security/login_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login_content.html.twig
@@ -16,18 +16,18 @@
                     <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
                 {% endif %}
                 <div class="form-group">
-                    <label class="form-control" for="username">{{ 'security.login.username'|trans }}</label>
-                    <input  class="form-control" type="text" id="username" name="_username" value="{{ last_username }}" required="required" autocomplete="username" />
+                    {#<label class="form-control" for="username">{{ 'Псевдоним'|trans }}</label>#}
+                    <input placeholder="Псевдоним"  class="form-control" type="text" id="username" name="_username" value="{{ last_username }}" required="required" autocomplete="username" />
                 </div>
                 <div class="form-group">
-                    <label class="form-control"  for="password">{{ 'security.login.password'|trans }}</label>
-                    <input  class="form-control" type="password" id="password" name="_password" required="required" autocomplete="current-password" />
+                    {#<label class="form-control"  for="password">{{ 'Пароль'|trans }}</label>#}
+                    <input  placeholder="Пароль"  class="form-control" type="password" id="password" name="_password" required="required" autocomplete="current-password" />
                 </div>
                 <div class="form-group">
                     <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-                    <label class="form-control"   class="form-control" for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+                    <label class="form-control"   class="form-control" for="remember_me">Запомни меня</label>
                 </div>
-                <input class="btn btn-primary btn-raised"   class="form-control" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+                <input class="btn btn-primary btn-raised"   class="form-control" type="submit" id="_submit" name="_submit" value="{{ 'вход'|trans }}" />
             </form>
         </div>
     </div>
