--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -1,6 +1,8 @@
 {% extends 'admin/base.html.twig' %}
 
 {% block body %}
+
+
     <section  style="padding-top: 44px;padding-bottom: 44px;">
         <div class="section-body">
             <div class="row">
@@ -120,6 +122,91 @@
                 {#<!-- END ALERT - TIME ON SITE -->#}
 
             </div><!--end .row -->
+
+
+
+
+
+           <!-- begin Оплатить вступительный взнос -->
+            {% if user is defined %}
+            {% if user.isresident == 0 %}
+            <div class="card panel style-default-dark">
+                <div class="card-head collapsed" data-toggle="collapse" data-parent="#accordion7" data-target="#accordion7-4">
+                    <header> <i style="margin-bottom: 0em;" class="md md-account-balance-wallet"></i> Вступительный взнос</header>
+                    <div class="tools">
+                        <a class="btn btn-icon-toggle"><i class="fa fa-plus"></i></a>
+                    </div>
+                </div>
+                <div id="accordion7-4" class="collapse">
+                    <div class="card-body">
+
+
+
+
+
+                        <div class="row card">
+                            <div class="_col-md-4">
+
+                                <div>
+
+                                    <center>
+                                        {% if true %}
+
+                                            <table class="table table-condensed">
+                                                <thead>
+                                                <tr>
+                                                    <th></th>
+                                                    <th>Ваш Email</th>
+                                                    <th>Сумма</th>
+                                                    <th></th>
+                                                </tr>
+                                                </thead>
+                                                <tbody>
+                                                <tr class="success">
+                                                    <th scope="row"></th>
+                                                    <td>{{ user.email }}</td>
+                                                    <td> 75 $</td>
+                                                    <td>
+                                                        <form method="post" action="https://payeer.com/merchant/">
+                                                            <input type="hidden" name="m_shop" value="{{ m_shop }}">
+                                                            <input type="hidden" name="m_orderid" value="{{ m_orderid }}">
+                                                            <input type="hidden" name="m_amount" value="{{ m_amount }}">
+                                                            <input type="hidden" name="m_curr" value="{{ m_curr }}">
+                                                            <input type="hidden" name="m_desc" value="{{ m_desc }}">
+                                                            <input type="hidden" name="m_sign" value="{{ sign }}">
+                                                            <input type="submit" class="btn btn-primary" name="m_process" value="ok"/>
+                                                        </form>
+                                                    </td>
+                                                    <td>
+                                                        <button class="btn btn-primary"   onclick="window.location.href='{{ path('app_admin') }}'" style="background-color: #a8360a;">отмена</button>
+                                                    </td>
+                                                </tr>
+                                                </tbody>
+                                            </table>
+
+                                        {% endif %}
+                                    </center>
+
+
+                                </div><!--end .card-body -->
+                            </div><!--end .col -->
+                        </div>
+
+
+
+
+                    </div>
+                </div>
+            </div><!--end .panel -->
+            {% endif %}
+            {% endif %}
+            <!-- end Оплатить вступительный взнос -->
+
+
+
+
+
+
             <div class="row" style="padding-top: 40px;">
 
                 <!-- BEGIN SITE ACTIVITY -->
