--- a/templates/admin/verify.html.twig
+++ b/templates/admin/verify.html.twig
@@ -1,6 +1,11 @@
 {% extends 'admin/base.html.twig' %}
 
 {% block body %}
+
+
+
+
+
     <section  style="padding-top: 44px;padding-bottom: 44px;">
         <div class="section-body">
             <div class="row" >
@@ -12,6 +17,8 @@
                                 <div class="card-head">
                                     <header>Верификация аккаунта </header>
                                 </div>
+
+                                {% if user.isverify == 0 %}
                                 <div class="card-body">
                                     <div class="alert alert-danger" role="alert">Не  верифицирован</div>
                                     <div>
@@ -31,6 +38,25 @@
 
                                     </div>
                                 </div><!--end .card-body -->
+
+                                {% else %}
+
+
+
+                                    <div class="card-body">
+                                        <div class="alert alert-success" role="alert">Верифицирован</div>
+                                        <div>
+                                            <center>
+                                                <img src="/main/img/varifacy_icon.png" />
+                                            </center>
+
+                                        </div>
+                                    </div><!--end .card-body -->
+
+                                    <br />
+
+                                {% endif %}
+
                             </div><!--end .col -->
                         </div><!--end .row -->
                     </div><!--end .card -->
@@ -39,4 +65,6 @@
             </div><!--end .row -->
         </div><!--end .section-body -->
     </section>
+
+
 {% endblock %}
