--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -34,7 +34,7 @@
 
 
     <!-- BEGIN CONTENT-->
-    <div id="content">
+    <div class="section-body contain-lg" style="background-color: #fff; ">
 
         <!-- BEGIN 404 MESSAGE -->
         <section>
@@ -49,6 +49,19 @@
                     <div class="col-lg-12 text-center">
                         <h1><span class="text-xxxl text-light">404 <i class="fa fa-search-minus text-primary"></i></span></h1>
                         <h2 class="text-light">Данная страница не существует</h2>
+
+
+                                                <p> Что-то сломано. <br/>
+                                                 Пожалуйста, дайте нам знать, что вы делали <br/>
+                                                 когда произошла эта ошибка. <br/>
+                                                 Мы исправим это как можно скорее. <br/>
+                                                 Извините за причиненные неудобства.
+
+                                                    <a style="color: #0a6ebd" href="/#contact">Форма обратной связи</a>
+
+                                                </p>
+
+
                     </div><!--end .col -->
                 </div><!--end .row -->
             </div><!--end .section-body -->
