--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -72,7 +72,8 @@
                 <li class="header-nav-brand" >
                     <div class="brand-holder">
                         <a href="/admin/">
-                            <span class="text-lg text-bold text-primary">Global Big Bell</span>
+                            <img src="/main/img/logo.png"   style="height: 540px;"/>
+                            {#<span class="text-lg text-bold text-primary">Global Big Bell</span>#}
                         </a>
                     </div>
                 </li>
