--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -249,7 +249,10 @@
                         <th scope="row">4</th>
                         <td>Инвестиции в недвижимость Тайланда</td>
                         <td style="color:#335433;" >  15% годовых  </td>
-                        <td>  <a href="/docs/PH-V_LH_R.pdf">Открыть</a>  + <a href="/docs/attachments.zip">Фото</a>  </td>
+                        <td>
+                            <a href="/thailand/property-investments">Открыть</a>
+                            {#<a href="/docs/PH-V_LH_R.pdf">Открыть</a>  + <a href="/docs/attachments.zip">Фото</a>#}
+                        </td>
                     </tr>
 
                     <tr>
@@ -257,7 +260,7 @@
                         <td>Доходные автомобили Тайланда</td>
                         <td style="color:#335433;" > до 50% годовых </td>
                         <td>
-                            {#<a href="#">Открыть</a>#}
+                            {#<a href="/thailand-property-investments">Открыть</a>#}
                         </td>
                     </tr>
                     </tbody>
