--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -71,7 +71,7 @@
                 </li>
                 <li class="header-nav-brand" >
                     <div class="brand-holder">
-                        <a href="/admin/">
+                        <a href="/">
                             <img src="/main/img/logo.png"   style="height: 540px;"/>
                             {#<span class="text-lg text-bold text-primary">Global Big Bell</span>#}
                         </a>
